@@ -63,7 +63,7 @@ Global
 		{FA4DD36C-5CF4-4CCD-8515-93ABF50D393C}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(MonoDevelopProperties) = preSolution
-		StartupItem = Bang# Test Client\Bang# Test Client.csproj
+		StartupItem = Bang# Server Daemon\Bang# Server Daemon.csproj
 		Policies = $0
 		$0.TextStylePolicy = $1
 		$1.TabWidth = 4
